--- a/public/assets/css/module.scss
+++ b/public/assets/css/module.scss
@@ -650,8 +650,23 @@ aside {
 .map {
   margin-bottom: 1em;
   max-width: 100%;
-  min-height: 480px;
+  min-height: 200px;
   color: black;
+  @media screen and (min-height: 340px){
+    min-height: 300px;
+  }
+  @media screen and (min-height: 400px){
+    min-height: 360px;
+  }
+  @media screen and (min-height: 450px){
+    min-height: 410px;
+  }
+  @media screen and (min-height: 480px){
+    min-height: 440px;
+  }
+  @media screen and (min-height: 520px){
+    min-height: 480px;
+  }
 }
 
 
